--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,9 @@
         "pda/pheanstalk": "~3.1",
         "maknz/slack": "~1.7",
         "hipchat/hipchat-php": "~1.4",
-        "mremi/flowdock": "~1.0"
+        "mremi/flowdock": "~1.0",
+        "apigen/apigen": "4.1.2",
+        "roave/better-reflection": "dev-master#c87d856"
     },
 
     "require-dev": {
