--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "maknz/slack": "~1.7",
         "hipchat/hipchat-php": "~1.4",
         "mremi/flowdock": "~1.0",
-        "apigen/apigen": "dev-master",
+        "apigen/apigen": "~5.0",
         "roave/better-reflection": "dev-master"
     },
 
