--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name"             : "block8/phpci",
     "description"      : "Simple continuous integration for PHP projects.",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "type"             : "library",
     "keywords"         : ["php", "phpci", "ci", "continuous", "integration", "testing", "phpunit", "continuous integration", "jenkins", "travis"],
     "homepage"         : "http://www.phptesting.org/",
